--- a/src/app/hola-mundo/hola-mundo.component.html
+++ b/src/app/hola-mundo/hola-mundo.component.html
@@ -5,32 +5,39 @@
 <div class="card-body">
       
       <br> 
-      <form formGroup="formularioContacto" ng-submit="onSubmit()">
+      <form formGroup="formularioInicio" >
         <div class="mb-2">
-         <label class="form-label">
-            Nombre
-        </label>
-        <input type="text" formControlName="formularioContacto.nombre" class="form-control"   placeholder="Ingrese nombre" required>
-        </div>
-        <div class="mb-2">
-          <label class="form-label">
-            Edad
-        </label>
-        
-        <input type="text" formControlName="edad" class="form-control" placeholder="Ingrese edad" required>
-        </div>
-        <div class="mb-2">
-        <label class="form-label">
-            Email
-        </label>
-        <input type="email" formControlName="email" class="form-control" placeholder="Ingrese email" required>
+          <label class="form-label">Tipo Solicitud</label>
+
+          <select formControlName="tipo_solicitud" class="form-control">  
+            <option>Requerimiento</option>
+            <option>Cumplimiento</option>
+         </select> 
+         
+        <br>
+         <label class="form-label">Tipo Motivo</label>
+
+          <select formControlName="tipo_motivo" class="form-control">  
+            <option>Nuevo</option>
+            <option>Reemplazo</option>
+        </select>
+        <br> 
+        <label class="form-label">Tipo Cumplimiento</label>  
+        <select formControlName="tipo_cumplimiento" class="form-control">  
+          <option>Nuevo Puesto</option>
+          <option>Reasignacion de puesto/option>
+       </select> 
+
+
+
+     
+       
+         
+
        </div>
-       <button class="btn btn-primary">Enviar</button>
-          
+      
        
      </form>       
-     </div>
-      {{formularioContacto.value.nombre}}
-     </div>
+     
      <br> 
      
