--- a/src/app/tarea-usuario/tarea-usuario.component.html
+++ b/src/app/tarea-usuario/tarea-usuario.component.html
@@ -6,14 +6,24 @@
 <div class="card-body">
 
     <br> 
-      <form formGroup="formularioPedido" >
+      <form formGroup="formularioSolicitud" >
         <div class="mb-2">
-            <label class="form-label">
-               FechaRegistro
-           </label>
-        </div>
-        
-        <input type="text" formControlName="fecha_registro" class="form-control"   placeholder="19/01/2024" disabled>
+          <label class="form-label">Codigo </label>
+          <input type="text" formControlName="codigo_solicitud" class="form-control"  placeholder="Ingresar codigo solicitud">
+          <label class="form-label">Descripcion Solicitud </label> 
+          <input type="text" formControlName="descripcion_solicitud" class="form-control"  placeholder="Ingresar descripcion solicitud">
+          <label class="form-label">Importe</label>
+          <input type="text" formControlName="importe_solicitud" class="form-control"  placeholder="Ingresar importe">
+          <label class="form-label">Importe</label>
+          <textarea name="text_comentarios" cols="80" rows="10">
+          </textarea>
+          </div>
+          
+          <button class="btn btn-primary">Grabar</button>
+          &nbsp;
+          <button class="btn btn-primary">Cancelar</button>
+           
+         
       </form>  
 
 </div>
