[ADD] Boton crear en evento inicio

--- a/src/app/hola-mundo/hola-mundo.component.html
+++ b/src/app/hola-mundo/hola-mundo.component.html
@@ -28,11 +28,10 @@
           <option>Reasignacion de puesto</option>
        </select> 
 
+       <br> 
+       <button class="btn btn-primary">Crear</button>
 
-
-     
-       
-         
+  
 
        </div>
       
