--- a/src/app/hola-mundo/hola-mundo.component.html
+++ b/src/app/hola-mundo/hola-mundo.component.html
@@ -29,12 +29,12 @@
        </select> 
 
        <br> 
-       <button class="btn btn-primary">Crear</button>
+       <button type="button" (click)="onCreate()" class="btn btn-primary">Crear</button>
 
   
 
        </div>
-      
+       
        
      </form>       
      
