jira story 2 completed

--- a/src/app/forms/process_modelo/startNewProcess.component.html
+++ b/src/app/forms/process_modelo/startNewProcess.component.html
@@ -52,8 +52,11 @@
       <p>Process has been started.
         <br/>
         <code>{{this.getCreatedId()}}</code>
+        <br/>
+        Continue with <a href="/tasklist/Registrar/{{this.getCreatedId()}}?p=true">Registrar Solicitud</a>        
       </p>
     </div>
+
     <br/>
     Return to <a href="/">home page</a>.    
   </div>
