--- a/src/app/processlist/processlist.component.html
+++ b/src/app/processlist/processlist.component.html
@@ -9,6 +9,9 @@
               <br/><br/>
               <a class="btn btn-primary" routerLink="/EventoInicio/{{processDefinition.key}}">Start New Instance</a>
               <br/><br/>
+              <a class="btn btn-secondary" routerLink="/tasklist/{{taskType_Registrar}}">View Tasks - Registrar</a>
+              <br/><br/>
+              <a class="btn btn-secondary" routerLink="/tasklist/{{taskType_Revisar}}">View Tasks - Revisar</a>
             </p>
       </li>
     </ul>
