sonar qube checks fixed

--- a/src/app/tasklist/tasklist.component.html
+++ b/src/app/tasklist/tasklist.component.html
@@ -1,7 +1,8 @@
 <div class="ui-tasklist">
   <h5>Tasks present in the system</h5>
   <div class="t-tasklist" >
-    <table class="tasklist">
+    <p id="mydesc">Summary list of tasks presented here.</p>
+    <table class="tasklist" aria-describedby="mydesc">
         <tr>
           <th>Sequence</th>
           <th>Name</th>
