Jira task CA-4 baseline done

--- a/src/app/forms/general/error.component.html
+++ b/src/app/forms/general/error.component.html
@@ -1,6 +1,10 @@
 <div>
     <br/>
-    <p>Application error. Please check below details.
+    
+    <h3 style="color: brown;">Application error</h3>
+    <p>
+      <br/>
+      Please check below details.
       <br/><br/>
       <mark>{{this.message}}</mark>
     </p>
